--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,8 @@
 **/*/puml/*.svg
 **/*/svg-inkscape
 
-# Created by https://www.toptal.com/developers/gitignore/api/visualstudiocode,latex,linux
-# Edit at https://www.toptal.com/developers/gitignore?templates=visualstudiocode,latex,linux
+# Created by https://www.toptal.com/developers/gitignore/api/windows,macos,microsoftoffice,visualstudiocode,latex,linux
+# Edit at https://www.toptal.com/developers/gitignore?templates=windows,macos,microsoftoffice,visualstudiocode,latex,linux
 
 ### LaTeX ###
 ## Core latex/pdflatex auxiliary files:
@@ -335,6 +335,60 @@ TSWLatexianTemp*
 # .nfs files are created when an open file is removed but is still being accessed
 .nfs*
 
+### macOS ###
+# General
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Icon must end with two \r
+Icon
+
+
+# Thumbnails
+._*
+
+# Files that might appear in the root of a volume
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
+
+### macOS Patch ###
+# iCloud generated files
+*.icloud
+
+### MicrosoftOffice ###
+*.tmp
+
+# Word temporary
+~$*.doc*
+
+# Word Auto Backup File
+Backup of *.doc*
+
+# Excel temporary
+~$*.xls*
+
+# Excel Backup File
+*.xlk
+
+# PowerPoint temporary
+~$*.ppt*
+
+# Visio autosave temporary files
+*.~vsd*
+
 ### VisualStudioCode ###
 .vscode/*
 !.vscode/settings.json
@@ -354,4 +408,31 @@ TSWLatexianTemp*
 .history
 .ionide
 
-# End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,latex,linux
+### Windows ###
+# Windows thumbnail cache files
+Thumbs.db
+Thumbs.db:encryptable
+ehthumbs.db
+ehthumbs_vista.db
+
+# Dump file
+*.stackdump
+
+# Folder config file
+[Dd]esktop.ini
+
+# Recycle Bin used on file shares
+$RECYCLE.BIN/
+
+# Windows Installer files
+*.cab
+*.msi
+*.msix
+*.msm
+*.msp
+
+# Windows shortcuts
+*.lnk
+
+# End of https://www.toptal.com/developers/gitignore/api/windows,macos,microsoftoffice,visualstudiocode,latex,linux
+
