Try to export alloy diagram

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 *.pdf
 !DeliveryFolder/*.pdf
 !Assignment RDD AY 2023-2024.pdf
+!rasd/alloy/diagrammone.pdf
 
 # Eclude puml svgs, we generate them on compile
 **/*/puml/*.svg
