--- a/.github/workflows/compile-pdfs.yml
+++ b/.github/workflows/compile-pdfs.yml
@@ -24,7 +24,9 @@ jobs:
       - uses: xu-cheng/latex-action@v3
         with:
           docker_image: ${{ steps.gen_img_tag.outputs.docker_img }}
-          root_file: rasd/rasd.tex
+          root_file: |
+            rasd/rasd.tex
+            dd/dd.tex
           work_in_root_file_dir: true
           pre_compile: args+=("-pdflatex=./pdflatex-with-vars.sh %O %S")
           latexmk_shell_escape: true
@@ -33,6 +35,11 @@ jobs:
         with:
           name: RASD
           path: rasd/rasd.pdf 
+      - name: Archive PDFs
+        uses: actions/upload-artifact@v3
+        with:
+          name: DD
+          path: dd/dd.pdf 
       - name: Create prerelease
         uses: "marvinpinto/action-automatic-releases@latest"
         with:
@@ -40,4 +47,6 @@ jobs:
           automatic_release_tag: "nightly"
           prerelease: true
           title: "Nightly Release"
-          files: rasd/rasd.pdf
+          files: |
+            rasd/rasd.pdf
+            dd/dd.pdf
